--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-native": "0.57.1",
     "react-native-background-task": "^0.2.1",
     "react-native-communications": "^2.2.1",
+    "react-native-easy-grid": "^0.2.0",
     "react-native-elements": "^0.19.1",
     "react-native-image-picker": "^0.27.1",
     "react-native-keyboard-aware-scroll-view": "^0.7.2",
